--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: Tahoma, Arial, Verdana, sans-serif; 
     font-size: 12pt; 
-    background-color: #f0f0f0; /* Цвет фона веб-страницы */
-    color: #333; /* Цвет основного текста */ 
+    background-color: #f0f0f0;
+    color: #333;
   }
 
 a {
